Match header background color to header content background color

--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -1,3 +1,9 @@
+header {
+  background-color: var(
+    --color-top
+  ); /* use js to add whatever background color of header content to this */
+}
+
 .header {
   display: flex;
   justify-content: flex-end;
