Add a logo on the mobile header

--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -4,12 +4,12 @@ header {
   ); /* use js to add whatever background color of header content to this */
 }
 
-.header {
+.header__content {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+  padding-top: 0.55rem;
+  padding-bottom: 0.55rem;
   background-color: var(--color-top);
   border-radius: 0 0 10px 10px;
   position: relative;
@@ -20,6 +20,16 @@ header {
   display: none;
 }
 
+.header__logo {
+  flex-grow: 1;
+  font-family: var(--font-family-heading);
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: var(--color-heading);
+  text-decoration: none;
+  cursor: pointer;
+}
+
 .header__bars {
   display: block;
   color: var(--color-general);
@@ -28,13 +38,40 @@ header {
 }
 
 /* xs */
-/* @media (min-width: 475px) {} */
+@media (min-width: 475px) {
+  .header__content {
+    padding-top: 0.425rem;
+    padding-bottom: 0.425rem;
+  }
+
+  .header__logo {
+    font-size: 1.75rem;
+  }
+}
 
 /* sm */
-/* @media (min-width: 640px) {} */
+@media (min-width: 640px) {
+  .header__content {
+    padding-top: 0.3rem;
+    padding-bottom: 0.3rem;
+  }
+
+  .header__logo {
+    font-size: 2rem;
+  }
+}
 
 /* md */
 @media (min-width: 768px) {
+  .header__logo {
+    display: none;
+  }
+
+  .header__content {
+    padding-top: 0.8rem;
+    padding-bottom: 0.8rem;
+  }
+
   .header__menu {
     display: flex;
     align-items: center;
