--- a/styles/style.css
+++ b/styles/style.css
@@ -9,11 +9,15 @@
     hsl(79, 32%, 45%)
   );
   --color-secondary: hsl(72, 76%, 57%);
+  --color-white: hsl(0, 0%, 100%);
+  --color-black: hsl(0, 0%, 0%);
 
   --color-bottom: hsl(0, 0%, 90%);
   --color-middle: hsl(0, 0%, 95%);
   --color-top: hsl(0, 0%, 100%);
   --color-general: hsl(0, 0%, 0%);
+  --color-nav-bg: rgba(22, 22, 23, 0.8);
+  --color-nav-item: rgba(255, 255, 255, 0.8);
 
   /* sizes */
   --size-xss: 0.5rem;
@@ -39,6 +43,9 @@
   /* fonts */
   --font-family-heading: "Lora", serif;
   --font-family-text: "source-sans-pro", sans-serif;
+
+  /* height of the header */
+  --header-height: 49.6px;
 }
 
 * {
@@ -81,6 +88,8 @@ button {
     --color-middle: hsl(0, 0%, 5%);
     --color-top: hsl(0, 0%, 10%);
     --color-general: hsl(0, 0%, 100%);
+    --color-nav-bg: rgba(250, 250, 252, 0.8);
+    --color-nav-item: rgba(0, 0, 0, 0.8);
 
     /* font colors */
     --color-heading: hsl(0, 0%, 95%);
