--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -94,6 +94,15 @@ header {
 
 /* md */
 @media (min-width: 768px) {
+  header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    backdrop-filter: blur(8px);
+    z-index: 9999;
+  }
+
   .header__logo {
     display: none;
   }
