--- a/styles/components/mobile-nav.css
+++ b/styles/components/mobile-nav.css
@@ -1,38 +1,93 @@
 .mobile-nav {
-  position: absolute;
-  top: var(--header-height);
+  position: fixed;
+  top: 0;
   left: 0;
   z-index: 999;
   width: 100%;
   height: 100%;
-  background-color: var(--color-middle);
-  display: none;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
+  backdrop-filter: blur(8px);
+  opacity: 1;
+  justify-content: left;
+  align-items: left;
+  text-align: left;
+  transform: translateY(-100%);
+  pointer-events: none;
+  background-color: var(--color-nav-bg);
+  transition: color 0.5s ease forwards;
+}
+
+.mobile-nav.active {
+  animation: slideDown 0.5s ease forwards;
+  pointer-events: auto;
+}
+
+.mobile-nav.not-active {
+  animation: slideUp 0.5s ease forwards;
+  pointer-events: auto;
 }
 
 .mobile-nav__menu {
   list-style: none;
-  padding: 0;
+  padding-top: 4rem;
+  padding-left: 2rem;
   margin: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: left;
   gap: 1rem;
 }
 
 .mobile-nav__link {
-  font-size: var(--size-sm);
   text-decoration: none;
+  font-size: 1.75rem;
   font-weight: 600;
-  letter-spacing: -0.05em;
-  color: var(--color-text);
+  color: var(--color-nav-item);
   text-transform: uppercase;
-  transition: color 0.3s;
 }
 
-.mobile-nav__link:hover {
-  color: var(--color-heading);
+@keyframes slideDown {
+  from {
+    transform: translateY(-100%);
+    background-color: var(--color-nav-bg);
+    /* opacity: 0; */
+    display: flex;
+  }
+  to {
+    transform: translateY(0%);
+    background-color: var(--color-general);
+    /* opacity: 1; */
+  }
 }
+
+@keyframes slideUp {
+  from {
+    transform: translateY(0%);
+    background-color: var(--color-general);
+    /* opacity: 1; */
+  }
+  to {
+    transform: translateY(-100%);
+    background-color: var(--color-nav-bg);
+    /* opacity: 0; */
+    display: none;
+  }
+}
+
+/* xs */
+/* @media (min-width: 475px) {} */
+
+/* sm */
+/* @media (min-width: 640px) {} */
+
+/* md */
+/* @media (min-width: 768px) {} */
+
+/* lg */
+/* @media (min-width: 1024px) {} */
+
+/* xl */
+/* @media (min-width: 1280px) {} */
+
+/* 2xl */
+/* @media (min-width: 1536px) {} */
