--- a/styles/utils.css
+++ b/styles/utils.css
@@ -38,12 +38,14 @@
   width: 100%;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  /* border: 1px solid white; */
 }
 
 .section {
   margin-top: 5rem;
+  /* border: 1px solid white; */
 }
 
 /* xs */
