--- a/styles/components/about.css
+++ b/styles/components/about.css
@@ -33,8 +33,10 @@
 
 .about__technologies-title {
   font-size: var(--size-base);
+  font-weight: 500;
   font-family: var(--font-family-heading);
   color: var(--color-heading);
+  margin-top: 1em;
   margin-bottom: 1em;
 }
 
