--- a/styles/components/work.css
+++ b/styles/components/work.css
@@ -11,6 +11,7 @@
 
 .work__project-title {
   font-size: var(--size-lg);
+  font-weight: 500;
   margin-bottom: 1.5rem;
   font-family: var(--font-family-heading);
   color: var(--color-heading);
