--- a/styles/components/about.css
+++ b/styles/components/about.css
@@ -11,14 +11,14 @@
 }
 
 .about__title {
-  font-size: 1.75rem;
+  font-size: var(--size-2xl);
   font-family: var(--font-family-heading);
   color: var(--color-heading);
 }
 
 .about__description {
   max-width: 60ch;
-  font-size: var(--size-base);
+  font-size: var(--size-sm);
   color: var(--color-text);
 }
 
@@ -32,11 +32,9 @@
 }
 
 .about__technologies-title {
-  font-size: var(--size-base);
-  font-weight: 500;
+  font-size: var(--size-sm);
   font-family: var(--font-family-heading);
   color: var(--color-heading);
-  margin-top: 1em;
   margin-bottom: 1em;
 }
 
@@ -75,16 +73,24 @@
   .about__title {
     font-size: var(--size-3xl);
   }
+
+  .about__description {
+    font-size: var(--size-base);
+  }
+
+  .about__img-wrapper {
+    width: 28.6875rem;
+  }
+
+  .about__technologies-title {
+    font-size: var(--size-base);
+  }
 }
 
 /* sm */
 @media (min-width: 640px) {
   .about {
     align-items: center;
-  }
-
-  .about__img-wrapper {
-    width: 29.819375rem;
   }
 }
 
