--- a/styles/components/contact.css
+++ b/styles/components/contact.css
@@ -8,21 +8,19 @@
 }
 
 .contact__title {
-  font-size: 1.75rem;
+  font-size: var(--size-2xl);
   font-family: var(--font-family-heading);
   color: var(--color-heading);
 }
 
 .contact__description {
-  text-align: center;
-  text-justify: inter-word;
-  font-size: var(--size-base);
+  font-size: var(--size-sm);
   color: var(--color-text);
   max-width: 60ch;
 }
 
 .contact__btn {
-  font-size: var(--size-base);
+  font-size: var(--size-sm);
   text-transform: uppercase;
 }
 
@@ -34,6 +32,14 @@
 
   .contact__title {
     font-size: var(--size-3xl);
+  }
+
+  .contact__description {
+    font-size: var(--size-base);
+  }
+
+  .contact__btn {
+    font-size: var(--size-base);
   }
 }
 
