--- a/styles/components/mobile-nav.css
+++ b/styles/components/mobile-nav.css
@@ -1,71 +1,38 @@
 .mobile-nav {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   z-index: 999;
   width: 100%;
   height: 100%;
-  backdrop-filter: blur(8px);
-  opacity: 1;
-  justify-content: left;
-  align-items: left;
-  text-align: left;
-  transform: translateY(-100%);
-  pointer-events: none;
-  background-color: var(--color-nav-bg);
-  transition: color 0.5s ease forwards;
-}
-
-.mobile-nav.active {
-  animation: slideDown 0.5s ease forwards;
-  pointer-events: auto;
-}
-
-.mobile-nav.not-active {
-  animation: slideUp 0.5s ease forwards;
-  pointer-events: auto;
+  background-color: var(--color-middle);
+  display: none;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 .mobile-nav__menu {
   list-style: none;
-  padding-top: 4rem;
-  padding-left: 2rem;
+  padding: 0;
   margin: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: left;
+  align-items: center;
   gap: 1rem;
 }
 
 .mobile-nav__link {
+  font-size: var(--size-sm);
   text-decoration: none;
-  font-size: 1.75rem;
-  font-weight: 500;
-  color: var(--color-nav-item);
+  font-weight: 600;
+  letter-spacing: -0.05em;
+  color: var(--color-text);
   text-transform: uppercase;
+  transition: color 0.3s;
 }
 
-@keyframes slideDown {
-  from {
-    transform: translateY(-100%);
-    background-color: var(--color-nav-bg);
-    display: flex;
-  }
-  to {
-    transform: translateY(0%);
-    background-color: var(--color-general);
-  }
-}
-
-@keyframes slideUp {
-  from {
-    transform: translateY(0%);
-    background-color: var(--color-general);
-  }
-  to {
-    transform: translateY(-100%);
-    background-color: var(--color-nav-bg);
-    display: none;
-  }
+.mobile-nav__link:hover {
+  color: var(--color-heading);
 }
