--- a/styles/components/work.css
+++ b/styles/components/work.css
@@ -1,20 +1,20 @@
 .work {
-  text-align: left;
+  text-align: center;
 }
 
 .work__title {
-  font-size: 1.75rem;
+  font-size: var(--size-2xl);
   font-family: var(--font-family-heading);
   color: var(--color-heading);
-  margin-bottom: 1.5rem;
+  margin: 1rem 0;
+  text-align: start;
 }
 
 .work__project-title {
-  font-size: var(--size-lg);
-  font-weight: 500;
-  margin-bottom: 1.5rem;
+  font-size: var(--size-base);
   font-family: var(--font-family-heading);
   color: var(--color-heading);
+  margin-bottom: 1rem;
 }
 
 .work__img-wrapper {
@@ -42,13 +42,13 @@
 }
 
 .work__project-description {
-  font-size: var(--size-base);
+  font-size: var(--size-sm);
   color: var(--color-text);
   margin: 1rem 0;
 }
 
 .work__project-btn {
-  font-size: var(--size-base);
+  font-size: var(--size-sm);
   text-transform: uppercase;
 }
 
@@ -67,17 +67,23 @@
     margin: 1.5rem 0;
   }
 
+  .work__project-title {
+    font-size: var(--size-lg);
+    margin-bottom: 1.5rem;
+  }
+
   .work__project-description {
+    font-size: var(--size-base);
     margin: 1.5rem 0;
+  }
+
+  .work__project-btn {
+    font-size: var(--size-base);
   }
 }
 
 /* sm */
 @media (min-width: 640px) {
-  .work {
-    text-align: center;
-  }
-
   .work__container {
     display: grid;
     grid-template-columns: 1fr 1fr;
