--- a/styles/components/hero.css
+++ b/styles/components/hero.css
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
   gap: 1rem;
-  height: calc(100vh - 2 * var(--header-height));
+  height: calc(100vh - (2 * var(--header-height) - 0.5rem));
   min-height: min-content;
 }
 
