--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -2,11 +2,10 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  padding-top: 0.55rem;
-  padding-bottom: 0.55rem;
-  padding-left: 1rem;
-  padding-right: 1rem;
-  margin-bottom: 0.5rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  background-color: var(--color-top);
+  border-radius: 0 0 10px 10px;
   position: relative;
   z-index: 9999;
 }
