--- a/styles/components/about.css
+++ b/styles/components/about.css
@@ -14,6 +14,17 @@
   font-size: 1.75rem;
   font-family: var(--font-family-heading);
   color: var(--color-heading);
+
+  /* Blur */
+  background-color: transparent;
+  backdrop-filter: blur(2px);
+  position: sticky;
+  display: inline-block;
+  width: fit-content;
+  padding: 0px 6px 2px 6px;
+  border: 1px solid hsla(0, 100%, 100%, 0.25);
+  border-radius: 100px;
+  top: 8px;
 }
 
 .about__description {
@@ -38,6 +49,17 @@
   color: var(--color-heading);
   margin-top: 1em;
   margin-bottom: 1em;
+
+  /* Blur */
+  background-color: transparent;
+  backdrop-filter: blur(2px);
+  position: sticky;
+  display: inline-block;
+  width: fit-content;
+  padding: 0px 6px 2px 6px;
+  border: 1px solid hsla(0, 100%, 100%, 0.25);
+  border-radius: 100px;
+  top: 8px;
 }
 
 .about__technologies-content {
