--- a/styles/components/contact.css
+++ b/styles/components/contact.css
@@ -11,6 +11,17 @@
   font-size: 1.75rem;
   font-family: var(--font-family-heading);
   color: var(--color-heading);
+
+  /* Blur */
+  background-color: transparent;
+  backdrop-filter: blur(2px);
+  position: sticky;
+  display: inline-block;
+  width: fit-content;
+  padding: 0px 6px 2px 6px;
+  border: 1px solid hsla(0, 100%, 100%, 0.25);
+  border-radius: 100px;
+  top: 8px;
 }
 
 .contact__description {
