--- a/styles/components/work.css
+++ b/styles/components/work.css
@@ -7,6 +7,17 @@
   font-family: var(--font-family-heading);
   color: var(--color-heading);
   margin-bottom: 1.5rem;
+
+  /* Blur */
+  background-color: transparent;
+  backdrop-filter: blur(2px);
+  position: sticky;
+  display: inline-block;
+  width: fit-content;
+  padding: 0px 6px 2px 6px;
+  border: 1px solid hsla(0, 100%, 100%, 0.25);
+  border-radius: 100px;
+  top: 8px;
 }
 
 .work__project-title {
